# simcoon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Brewfile  CMakeLists.txt  Install.bat  Install.sh  README.md  conanfile.txt  environment.yml  environment_arm64.yml  environment_doc.yml  environment_win.yml  install_conda.md  pyproject.toml  requirements.apt  vcpkg.json
arma2numpy-builder/: CMakeLists.txt
arma2numpy-builder/include/simcoon/arma2numpy/: list_vector.hpp  numpy_arma.hpp
arma2numpy-builder/src/arma2numpy/: list_vector.cpp
arma2numpy-builder/test/CM_func/: TCM_func.cpp  boostpython_arma_wrapper.cpp
arma2numpy-builder/test/arma2numpy/: boostpython_arma_wrapper.cpp  run_test.py
bench/: bench_legacy_vs_modular.py
benchmark/: README.md  benchmark_comparison.md  benchmark_new_solver.py  benchmark_old_solver.py  benchmark_results_new.npz  benchmark_results_old.npz  benchmark_solver.py  compare_benchmarks.py
carma.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
cmake/: FindFTensor.cmake  simcoonConfig.cmake.in
conda.recipe/: bld.bat  build.sh  meta.yaml  (+1 more)
simcoon-python-builder/: CMakeLists.txt
simcoon-python-builder/cmake/: Findarma2numpy.cmake  Findsimcoon.cmake  README.txt
simcoon-python-builder/include/simcoon/: omp_compat.hpp
simcoon-python-builder/include/simcoon/arma2numpy/: list_vector.hpp  numpy_arma.hpp  numpy_cgal.hpp
simcoon-python-builder/include/simcoon/docs/Libraries/Continuum_mechanics/: doc_constitutive.hpp  doc_contimech.hpp  doc_criteria.hpp  doc_damage.hpp  doc_hyperelastic.hpp  doc_kinematics.hpp  doc_recovery_props.hpp  doc_stress.hpp  doc_transfer.hpp
simcoon-python-builder/include/simcoon/docs/Libraries/Homogenization/: doc_eshelby.hpp
simcoon-python-builder/include/simcoon/docs/Libraries/Maths/: doc_rotation.hpp
simcoon-python-builder/include/simcoon/docs/Libraries/Solver/: doc_solver_optimized.hpp
simcoon-python-builder/include/simcoon/python_wrappers/: conversion_helpers.hpp  doc_constitutive.hpp  doc_contimech.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Continuum_Mechanics/: constitutive.hpp  contimech.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Continuum_mechanic/: criteria.hpp  recovery_props.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Continuum_mechanics/: Leff.hpp  RunUmat.hpp  Umat_fedoo.hpp  constitutive.hpp  contimech.hpp  criteria.hpp  damage.hpp  hyperelastic.hpp  kinematics.hpp  objective_rates.hpp  recovery_props.hpp  stress.hpp  tensor.hpp  transfer.hpp  umat.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Homogenization/: eshelby.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Identification/: constants.hpp  identification.hpp  optimize.hpp  parameters.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Material/: ODF.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Maths/: lagrange.hpp  rotation.hpp  rotation_class.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Phase/: state_variables.hpp  state_variables_M.hpp  state_variables_T.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Solver/: read.hpp  solver.hpp  solver_optimized.hpp  solver_run.hpp  step_meca.hpp  step_thermomeca.hpp
simcoon-python-builder/include/simcoon/python_wrappers/Libraries/Unit_cell/: unit_cell.hpp  write.hpp
simcoon-python-builder/src/arma2numpy/: list_vector.cpp  numpy_arma.cpp  numpy_cgal.cpp
simcoon-python-builder/src/python_wrappers/: boostpython_simcoon_wrappers.cpp  boostpython_smartplus_wrappers.cpp  python_module.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Continuum_Mechanics/: Leff.cpp  constitutive.cpp  contimech.cpp  criteria.cpp  damage.cpp  kinematics.cpp  recovery_props.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Continuum_mechanic/: damage.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Continuum_mechanics/: Leff.cpp  RunUmat.cpp  Umat_fedoo.cpp  constitutive.cpp  contimech.cpp  criteria.cpp  damage.cpp  hyperelastic.cpp  kinematics.cpp  objective_rates.cpp  recovery_props.cpp  stress.cpp  tensor.cpp  transfer.cpp  umat.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Homogenization/: eshelby.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Identification/: constants.cpp  identification.cpp  optimize.cpp  parameters.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Material/: ODF.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Maths/: lagrange.cpp  rotation.cpp  rotation_class.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Phase/: state_variables.cpp  state_variables_M.cpp  state_variables_T.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Solver/: read.cpp  solver.cpp  solver_optimized.cpp  solver_run.cpp  step_meca.cpp  step_thermomeca.cpp
simcoon-python-builder/src/python_wrappers/Libraries/Unit_cell/: unit_cell.cpp
simcoon-python-builder/test/CM_func/: TCM_func.hpp  run_test.py
simcoon-python-builder/test/Carma/: Tarr_to_mat.cpp  Tarr_to_mat.hpp  Troundtrip.cpp  bindings.cpp  run_test_arr_to_mat.py
simcoon-python-builder/test/arma2numpy/: Tarma2numpy.cpp  Tarma2numpy.hpp  boostpython_arma_wrapper.cpp  run_test.py
simcoon-python-builder/test/exception_test/: Teig_sym.cpp  Teig_sym.hpp  bindings.cpp  run_test_exception.py
simcoon-python-builder/test/identification/: run_test.py  test.py
simcoon-python-builder/test/parameter_test/: test.py
simcoon-python-builder/test/parameter_test/data/: E_exp.txt
simcoon-python-builder/test/simmit_test/: run_test.py
simcoon-python-builder/test/test_core/: run_test.py  solver_harness.py  test_dR_drotvec.py  test_modular.py  test_modular_finite.py  test_rotation.py  test_solver_io.py  test_solver_robustness.py  test_solver_run.py  test_tensor.py  test_tensor_batch.py  test_umat_T.py
simcoon-python-builder/test/test_core/data/: path.txt
tests/: CMakeLists.txt  test_fedoo_integration.py  test_import.py
(+974 files in other folders)
